--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </button>
         </a>
 
-        <a href="penjelasan.html" target="_blank">
+        <a href="penjelasan.html">
             <button style="background-color: #32b004; color: white;">
                 <h3>Penjelasan Code</h3>
             </button>
